--- a/ecommerce_website/composer.json
+++ b/ecommerce_website/composer.json
@@ -7,8 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel/breeze": "^2.3",
+        "laravel/cashier": "^16.1",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.7",
+        "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
